# lorite-personal-learning

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .prettierignore  .vale.ini  .ws.code-workspace  BUILD  BUILD.bazel  CODE_OF_CONDUCT.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  eslint.config.mjs  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  requirements.txt  stylelint.config.mjs  tsconfig.json
.devcontainer/: Dockerfile  (+2 more)
cheatsheets/: BUILD.bazel  README.md
cheatsheets/csharp/: naming_conventions.tex
src/courses-free/hacking_cpp/000.cpp_beginners_guide/: BUILD.bazel  README.md
src/courses-free/hacking_cpp/000.cpp_beginners_guide/src/p01-first_steps/: p01-000-hello_world.cpp  p01-001-input_and_output_basics.cpp  p01-002-fundametal_types.cpp  p01-003-std_vector_introduction.cpp  p01-004-enumerations.cpp  p01-005-control_flow_basics.cpp  p01-006-type_system_basics.cpp  p01-007-functions_basics.cpp  p01-008-memory_basics.cpp  p01-009-strings_basics.cpp  p01-010-references.cpp  p01-011-aggregate_types.cpp  p01-012-function_call_mechanics.cpp
src/courses-free/hacking_cpp/000.cpp_beginners_guide/src/p1-first_steps/: p1-000-hello_world.cpp
src/courses-free/microsoft_learning/000.get_started_with_csharp/: BUILD.bazel  README.md
src/courses-free/microsoft_learning/000.get_started_with_csharp/certificates/: foundational-c-sharp-with-microsoft-certification-exam.txt
src/courses-free/microsoft_learning/000.get_started_with_csharp/src/: 000_literal_data_types.cs  001_basic_string_formatting.cs  002_basic_operations_on_numbers.cs  p1_m02_literal_data_types.cs  p1_m03_basic_string_formatting.cs  p1_m04_basic_operations_on_numbers.cs  p1_m05_project_calculate_and_print_student_grades.cs  p1_m06_project_calculate_final_gpa.cs
src/courses-free/microsoft_learning/000.get_started_with_csharp/src/p2-create_and_run_simple_csharp_console_applications/: p2-m02-add_decision_logic.cs  p2-m04-create_readable_code_with_conventions_whitespace_and_comments.cs  p2-m05-project_foreach_and_if_elseif_else.cs  p2-m06-project_foreach_and_if_elseif_else_2.cs
src/courses-free/microsoft_learning/000.get_started_with_csharp/src/p2_create_and_run_simple_csharp_console_applications/: p2_m01_call_methods_from_dotnet_class_library.cs  p2_m03_store_and_iterate_through_sequences_of_data_using_arrays_and_foreach.cs  p2_m0n_temp.cs
src/courses-free/microsoft_learning/000.get_started_with_csharp/src/p3-add_logic_to_csharp_console_applications/: p3-m01-evaluate_boolean_expressions_to_make_decisions.cs  p3-m02-control_variable_scope_and_logic_code_block.cs  p3-m03-branch_the_flow_of_code_using_the_switch_case_construct.cs  p3-m04-iterate_through_a_code_block_using_for_statement.cs  p3-m05-add_looping_logic_to_your_code_using_the_do_while_and_while_statements.cs  (+2 more)
src/courses-free/microsoft_learning/000.get_started_with_csharp/test/: test_lib_000_literal_data_types.cs
src/design_patterns/cpp/: BUILD.bazel  README.md
src/design_patterns/cpp/include/design_patterns/: composition.hpp
src/design_patterns/cpp/test/: composition_test.cpp
src/examples/bazel-test-project-cpp/: BUILD.bazel  hello-lib.cc  hello-lib.h  hello-test.cc  hello-world.cc
src/examples/bazel-test-project-cpp/include/bazel-test-project-cpp/: hello-lib.h
src/examples/bazel-test-project-cpp/main/: hello-world.cc  hello-world.cpp
src/examples/bazel-test-project-cpp/src/: hello-lib.cc  hello-lib.cpp
src/examples/bazel-test-project-cpp/test/: hello-test.cc  hello-test.cpp
src/examples/bazel-test-project-csharp/: BUILD.bazel  example_deps.bzl
src/examples/bazel-test-project-dotnet/: BUILD.bazel
src/examples/bazel-test-project-python-flask/: BUILD.bazel  requirements.in  requirements.txt
src/examples/bazel-test-project-python-flask/src/: flask_main.py
src/examples/bazel-test-project-python-flask/tests/: calculator_test.py
src/examples/bazel-test-project-typescript/: BUILD.bazel  README.md  package.json  tsconfig.json
src/examples/bazel_test_project_java/: BUILD.bazel
src/exercises/job_interviews/company000/: BUILD.bazel  README.md
src/exercises/job_interviews/company000/data/: exercise_1_graph.txt  simple_graph.txt
src/exercises/job_interviews/company000/main/: exercise_1.cpp
src/exercises/job_interviews/company000/src/: node.cpp  path.cpp  triangle_directed_graph.cpp
src/exercises/job_interviews/company000/test/: node_test.cpp  path_test.cpp  triangle_directed_graph_test.cpp
src/exercises/leetcode/: BUILD.bazel  README.md
src/exercises/leetcode/src/0001_two_sum/: benchmark_cpp.cpp  results.md  solution_cpp.hpp  test_cpp.cpp
src/exercises/leetcode/src/000_two_sum/: description.md  results.md  solution_cpp.cpp  solution_cpp.hpp  test_cpp.cpp
src/exercises/leetcode/src/0020_valid_parentheses/: description.md  results.md  solution_cpp.cpp  solution_cpp.hpp  test_cpp.cpp
src/other/cpp/std_tests/: BUILD  BUILD.bazel  std_find.cpp
src/other/cpp/std_tests/test/: pointers_test.cpp  std_find_test.cpp
src/other/cpp/templates_tests/: BUILD.bazel
src/other/cpp/templates_tests/src/: simple_templates_function_example.cpp
src/other/cpp/templates_tests/test/: simple_templates_function_example_test.cpp
src/other/python/scripts/: BUILD.bazel  requirements.txt
src/other/python/scripts/src/: web_scrapper_miro_templates.py
src/subrepos/ultimate-python/: .gitrepo  BUILD.bazel  CODE_OF_CONDUCT.md  README.de.md  README.es.md  README.ko.md  README.md  README.zh_tw.md  requirements.txt
src/subrepos/ultimate-python/.circleci/: config.yml
src/subrepos/ultimate-python/.github/: PULL_REQUEST_TEMPLATE.md
src/subrepos/ultimate-python/ultimatepython/advanced/: benchmark.py  data_format.py  meta_class.py  mixin.py  mro.py  regex.py  weak_ref.py
src/subrepos/ultimate-python/ultimatepython/classes/: encapsulation.py  iterator_class.py
src/subrepos/ultimate-python/ultimatepython/data_structures/: dict.py
src/subrepos/ultimate-python/ultimatepython/syntax/: bitwise.py  expression.py
(+98 files in other folders)
