load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands") # C++ 

exports_files([
    ".clang-tidy",
    ".clang-format",
])

# C++ 
refresh_compile_commands(
    name = "refresh_cpp_compile_commands",
    targets = {
      "//src/...": "",
    },
)

load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")
