load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "csharp_naming_conventions",
    srcs = glob([
        "csharp/naming_conventions.tex",
    ]) + [
        "@bazel_latex//packages:biblatex",
        "@bazel_latex//packages:fancyhdr",
        "@bazel_latex//packages:multicol",
        "@bazel_latex//packages:tabularx",
        "@bazel_latex//packages:tabulary",
        "@bazel_latex//packages:graphicx",
        "@bazel_latex//packages:xcolor",
        # "@bazel_latex//packages:setspace",
        "@bazel_latex//packages:lastpage",
        "@bazel_latex//packages:seqsplit",
        "@bazel_latex//packages:ulem",
        "@bazel_latex//packages:amsmath",
        "@bazel_latex//packages:mnsymbol",
        # "@bazel_latex//packages:wasysym",
        # "references.bib",
        # "//example/example_class:example_class",
    ],
    cmd_flags = ["--bibtex-cmd=bibtex"],
    format = "pdf",  # Is the default
    main = "csharp/naming_conventions.tex",
)
