package(default_visibility = ["//visibility:private"])

cc_library(
    name = "composition_lib",
    hdrs = ["include/design_patterns/composition.hpp"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "composition_test",
    size = "small",
    srcs = ["test/composition_test.cpp"],
    deps = [
        ":composition_lib",
        "@googletest//:gtest_main",
    ],
)
