load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)


ts_project(
    name = "src_ts",
    srcs = [
        "src/CheckboxWithLabel.tsx",
        "src/a.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@types/react",
    ],
)

ts_project(
    name = "src_test_ts",
    srcs = [
        "src/CheckboxWithLabel.spec.tsx",
        "src/a.spec.ts",
    ],
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":src_ts",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "src_test",
    config = ":jest_config",
    data = [
        ":src_test_ts",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/react",
    ],
    node_modules = "//:node_modules",
)
